fixed ugly spillover in tablet view of sub menu

--- a/css/custom.css
+++ b/css/custom.css
@@ -33,46 +33,13 @@ height:100%;
     margin-bottom: 20%;
     margin-right: 0%;
     margin-left: 0%;}
+
+    #site-submenu {
+      visibility: hidden;
+  }
 }
 
-#site-wrapper {
-    position: relative;
-    overflow: hidden;
-    width: 100%;
-    height: 100%; 
-}
 
-#site-canvas {
-    width: 100%;
-    height: 100%;
-    position: relative;
-    -webkit-transform: translateX(0);
-    transform: translateX(0);
-    -webkit-transition: .3s ease all;
-    transition: .3s ease all;
-    padding: 5% 0; /* Temp: Just spacing. */
-}
-
-#site-submenu {
-    width: 200px;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 20px;
-    background: #FFDC00;
-    padding: 15px;
-}
-
-#site-canvas {
-    -webkit-transform: translateZ(0) translateX(0);
-    transform: translateZ(0) translateX(0);
-     -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-}
-.show-nav #site-canvas {
-    -webkit-transform: translateZ(0) translateX(180px);  
-    transform: translateZ(0) translateX(180px);  
-}
 
 /* make sidebar nav vertical */ 
 @media (min-width: 768px) {
@@ -113,6 +80,44 @@ height:100%;
   	float: none;
   	display: block;
   	padding-bottom:6px;
+  }
+
+  #site-wrapper {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    height: 100%; 
+  }
+
+  #site-canvas {
+      width: 100%;
+      height: 100%;
+      position: relative;
+      -webkit-transform: translateX(0);
+      transform: translateX(0);
+      -webkit-transition: .3s ease all;
+      transition: .3s ease all;
+      padding: 5% 0; /* Temp: Just spacing. */
+  }
+
+  #site-submenu {
+      
+      height: 100%;
+      position: absolute;
+      top: 0;
+      background: #FFDC00;
+      padding: 15px;
+  }
+
+  #site-canvas {
+      -webkit-transform: translateZ(0) translateX(0);
+      transform: translateZ(0) translateX(0);
+       -webkit-backface-visibility: hidden;
+      backface-visibility: hidden;
+  }
+  .show-nav #site-canvas {
+      -webkit-transform: translateZ(0) translateX(200px);  
+      transform: translateZ(0) translateX(200px);  
   }
 
 }
